# ai-openai-pipeline

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
api/: app.py
examples/: 01_basic_chat.py  02_function_calling.py  03_embeddings_similarity.py  04_structured_output.py  demo.py
pipeline/: core.py  redis_storage.py
tools/: builtin.py  definitions.py
