[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-openai-pipeline"
version = "1.0.0"
description = "Production OpenAI pipeline — streaming, function calling, embeddings, structured output, conversation memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
]

[project.scripts]
ai-pipeline = "main:main"

[tool.setuptools.packages.find]
include = ["pipeline*", "tools*", "api*"]
